objects/Ren_Support_Term_Summary__c.object
<CustomObject>
    <description>Stores the support Term summary details for Order Review Report.</description>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Total__c</fullName>
        <formula>Term_Total__c / No_of_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Months__c</fullName>
        <formula>( Expiration_Date__c - Effective_Date__c )/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_name__c</fullName>
        <label>Quote name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Ren Support Term Summary</relationshipLabel>
        <relationshipName>Ren_Support_Term_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Support_Term__c</fullName>
        <label>Support Term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Total__c</fullName>
        <label>Term Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ren Support Term Summary</label>
    <nameField>
        <label>Ren Support Term Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ren Support Term Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>